@@ -497,6 +497,15 @@ Deprecations and Behavior Differences
   exists in the renderer globals dictionary before setting an overriding
   value.
 
+- The :meth:`pyramid.config.Configurator.add_route` method allowed two routes
+  with the same route to be added without an intermediate call to
+  :meth:`pyramid.config.Configurator.commit``.  If you now receive a
+  ``ConfigurationError`` at startup time that appears to be ``add_route``
+  related, you'll need to either a) ensure that all of your route names are
+  unique or b) call ``config.commit()`` before adding a second route with the
+  name of a previously added name or c) use a Configurator that works in
+  ``autocommit`` mode.
+
 Dependency Changes
 ------------------
 
